--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div>
 		<footer>
     		<ul>
-        		<li><a href="mailto:johnmoreira1019@gmail.com">email</a></li>
+        		<li><a href="mailto:johnmoreira1019@gmail.com">Email me!</a></li>
         		<li><a href="https://github.com/jnm26">github.com/jnm26</a></li>
 			</ul>
 		</footer>
