--- a/blog.html
+++ b/blog.html
@@ -5,13 +5,18 @@
 		<link rel="stylesheet" type="text/css" href="main.css">
 	</head>
 	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about.html">About</a></li>
+        		<li><a href="/resume.html">Resume</a></li>
+        		<li><a href="/blog.html">Blog</a></li>
+    		</ul>
+		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>Nothing here yet...</h1>
     		</div>
 		</div>
-		<footer>
-
-		</footer>
 	</body>
 </html>
