--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<p>This website is a WIP, please check back at the <em>End of April</em> for a more complete version</p>
     		</div>
 		</div>
-		<img src="me.jpg" alt="Photo of John" height="631" width="617">
+		<img src="photo.jpg" alt="Photo of John" height="631" width="617">
 		<footer>
     		<ul>
         		<li><a href="mailto:johnmoreira1019@gmail.com">Email me!</a></li>
