--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about.html">About</a></li>
+        		<li><a href="/">Home / About Me</a></li>
         		<li><a href="/resume.html">Resume</a></li>
         		<li><a href="/blog.html">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>This is John Moreira's webpage!</h1>
-				<p>This website is a WIP, please check back at the <em>End of April</em> for a more complete version</p>
+        		<h1>About John Moreira</h1>
+				<p>Thanks for coming to my site! I'm a programmer with interest in game dev, optimization, and hardware/software interfacing.</p>
+				<p>I'll be using the blog portion of this site to document my work and progress on some of my personal projects and other programming endeavors.</p>
     		</div>
 		</div>
 		<img src="photo.jpg" alt="Photo of John" height="210" width="206">
