updating about me

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         		<li><a href="/">Home / About Me</a></li>
         		<li><a href="/resume.html">Resume</a></li>
         		<li><a href="/blog.html">Blog</a></li>
+				<li><a href="https://github.com/jnm26">GitHub</a></li>
     		</ul>
 		</nav>
 		<div class="container">
@@ -17,6 +18,8 @@
         		<h1>About John Moreira</h1>
 				<p>Thanks for coming to my site! I'm a programmer with interest in game dev, optimization, and hardware/software interfacing.</p>
 				<p>I'll be using the blog portion of this site to document my work and progress on some of my personal projects and other programming endeavors.</p>
+				<p>I'm just beginning work on a game idea I've had in mind for years. It's called <b>Undertow</b>, and is heavily inspired by the mechanics of Smash Melee, which I've played competitively for almost four years now.</p>
+				<p>Please check out my blog to learn more about it!</p>
     		</div>
 		</div>
 		<img src="photo.jpg" alt="Photo of John" height="210" width="206">
