--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<p>Thanks for coming to my site! I'm a programmer with interest in game dev, optimization, and hardware/software interfacing.</p>
 				<p>I'll be using the blog portion of this site to document my work and progress on some of my personal projects and other programming endeavors.</p>
 				<p>I'm just beginning work on a game idea I've had in mind for years. It's called <b>Undertow</b>, and is heavily inspired by the mechanics of Smash Melee, which I've played competitively for almost four years now.</p>
-				<p>Please check out my blog to learn more about it!</p>
+				<p>Please check out my blog to learn more about it! <a href="/blog.html">Blog</a> </p>
     		</div>
 		</div>
 		<img src="photo.jpg" alt="Photo of John" height="210" width="206">
