--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
 				<p>Please check out my blog to learn more about it! <a href="/blog.html">Blog</a> </p>
     		</div>
 		</div>
-		<img src="photo.jpg" alt="Photo of John" height="210" width="206">
+		<img src="photo.jpg" alt="Photo of John Moreira" height="210" width="206">
 		<footer>
     		<ul>
-        		<li><a href="mailto:johnmoreira1019@gmail.com">Email me!</a></li>
-        		<li><a href="https://github.com/jnm26">github.com/jnm26</a></li>
+        		<li><a href="mailto:johnmoreira1019@gmail.com">Contact: johnmoreira1019@gmail</a></li>
 			</ul>
 		</footer>
 	</body>
