--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home / About Me</a></li>
-        		<li><a href="/resume.html">Resume</a></li>
+        		<li><a href="https://github.com/jnm26/jnm26.github.io/blob/master/John%20Moreira%20Resume.docx" target="_blank">Download Resume</a></li>
         		<li><a href="/blog.html">Blog</a></li>
 				<li><a href="https://github.com/jnm26">GitHub</a></li>
     		</ul>
