--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,10 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Nothing here yet...</h1>
+        		<h1>So what's an Undertow anyway? - 4/30/17</h1>
+				<h2>un·der·tow</h2>
+				<p>another term for rip current, used in the incorrect belief that rip currents drag swimmers below the surface.</p>
+				<p>an implicit quality, emotion, or influence underlying the superficial aspects of something and leaving a particular impression.</p>
     		</div>
 		</div>
 	</body>
