--- a/blog.html
+++ b/blog.html
@@ -8,15 +8,16 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="/about.html">About</a></li>
-        		<li><a href="/resume.html">Resume</a></li>
+        		<li><a href="https://www.dropbox.com/s/mn2ijk8mibrjsyh/John%20Moreira%20Resume.docx?dl=0S" target="_blank">Resume</a></li>
         		<li><a href="/blog.html">Blog</a></li>
+				<li><a href="https://github.com/jnm26">GitHub</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>So what's an Undertow anyway? - 4/30/17</h1>
-				<h2>un·der·tow</h2>
+        		<h1>John Moreira's Blog</h1>
+				<h2>So what's an Undertow anyway? - 4/30/17</h2>
+				<h3>un·der·tow</h3>
 				<p>another term for rip current, used in the incorrect belief that rip currents drag swimmers below the surface.</p>
 				<p>an implicit quality, emotion, or influence underlying the superficial aspects of something and leaving a particular impression.</p>
     		</div>
