--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home / About Me</a></li>
+        		<li><a href="/">Home</a></li>
         		<li><a href="https://www.dropbox.com/s/mn2ijk8mibrjsyh/John%20Moreira%20Resume.docx?dl=0S" target="_blank">Resume</a></li>
         		<li><a href="/blog.html">Blog</a></li>
 				<li><a href="https://github.com/jnm26">GitHub</a></li>
