--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<p>I'll be using the blog portion of this site to document my work and progress on some of my personal projects and other programming endeavors.</p>
 				<p>I'm just beginning work on a game idea I've had in mind for years. It's called <b>Undertow</b>, and is heavily inspired by the mechanics of Smash Melee, which I've played competitively for almost four years now.</p>
 				<p>Please check out my blog to learn more about it! <a href="/blog.html">Blog</a> </p>
-				<p> Also, I have a really cool cat, named Albert</p>
+				<p> Also, I have a really cool cat, named Albert.</p>
     		</div>
 		</div>
 		<img src="albert.jpg" alt="Photo of Albert" height="240" width="320">
