--- a/blog.html
+++ b/blog.html
@@ -21,8 +21,8 @@
 				<p>another term for rip current, used in the incorrect belief that rip currents drag swimmers below the surface.</p>
 				<p>an implicit quality, emotion, or influence underlying the superficial aspects of something and leaving a particular impression.</p>
 				<p>Undertow is a game I've been thinking of making since around 2013. The whole idea actually came from one of the powers in the game BioShock: Infinite (which unfortunately ended up dissapointing me as a game). 
-				Nevertheless, this unique power in the game let you push and pull your foes using a beam of water. I thought this mechanic was super cool, but it also didn't really change the game in any way. 
-				Ultimately, it was just a cool power-up. </p>  
+				It's a 2D game which focuses on player movement, and having a wide array of options to approach any given situation, primarily using water-based abilities.
+				</p>  
     		</div>
 		</div>
 	</body>
