--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     		<ul>
         		<li><a href="/">Home</a></li>
         		<li><a href="https://www.dropbox.com/s/mn2ijk8mibrjsyh/John%20Moreira%20Resume.docx?dl=0S" target="_blank">Resume</a></li>
-        		<li><a href="/blog.html">Blog</a></li>
 				<li><a href="https://github.com/jnm26">GitHub</a></li>
     		</ul>
 		</nav>
@@ -18,9 +17,9 @@
         		<h1>About John Moreira</h1>
 				<img src="photo.jpg" alt="Photo of John Moreira" height="325" width="332">
 				<p>Thanks for coming to my site! I'm a programmer with interest in game dev, optimization, and hardware/software interfacing.</p>
-				<p>I'll be using the blog portion of this site to document my work and progress on some of my personal projects and other programming endeavors.</p>
-				<p>I'm just beginning work on a game idea I've had in mind for years. It's called <b>Undertow</b>, and is heavily inspired by the mechanics of Smash Melee, which I've played competitively for almost four years now.</p>
-				<p>Please check out my blog to learn more about it! <a href="/blog.html">Blog</a> </p>
+				<p>I started programming when I was a freshman in High School when I took a Visual Basic/C# class. I had loved computers and computer games since I was a kid, so learning programming was the natural progression of my interests.
+				I continued through all of the programming courses my School Offered, and it wasn't long before I decided that Computer Science and programming was my passion. I loved the freedom, utility, and opportunity presented by the medium.
+				Since College, I've participated in quite a few Hackathons and Game Jams, working with my friends on various projects that interested us. </p>
 				<p> Also, I have a really cool cat, named Albert.</p>
     		</div>
 		</div>
