--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         		<li><a href="/">Home</a></li>
         		<li><a href="https://www.dropbox.com/s/mn2ijk8mibrjsyh/John%20Moreira%20Resume.docx?dl=0S" target="_blank">Resume</a></li>
 				<li><a href="https://github.com/jnm26">GitHub</a></li>
+				<li><a href="/projects">Projects</a></li>
     		</ul>
 		</nav>
 		<div class="container">
@@ -18,8 +19,9 @@
 				<img src="photo.jpg" alt="Photo of John Moreira" height="325" width="332">
 				<p>Thanks for coming to my site! I'm a programmer with interest in game dev, optimization, and hardware/software interfacing.</p>
 				<p>I started programming when I was a freshman in High School when I took a Visual Basic/C# class. I had loved computers and computer games since I was a kid, so learning programming was the natural progression of my interests.
-				I continued through all of the programming courses my School Offered, and it wasn't long before I decided that Computer Science and programming was my passion. I loved the freedom, utility, and opportunity presented by the medium.
+				I continued through all of the programming courses my school offered, and it wasn't long before I decided that Computer Science and programming was my passion. I loved the freedom, utility, and opportunity presented by the medium.
 				Since College, I've participated in quite a few Hackathons and Game Jams, working with my friends on various projects that interested us. </p>
+				<p> If you'd like to see some of my projects, check out the <a href="/projects">Projects</a></li> tab. You could also check out my <a href="https://github.com/jnm26">GitHub</a></li>.</p>
 				<p> Also, I have a really cool cat, named Albert.</p>
     		</div>
 		</div>
