--- a/blog.html
+++ b/blog.html
@@ -9,20 +9,22 @@
     		<ul>
         		<li><a href="/">Home</a></li>
         		<li><a href="https://www.dropbox.com/s/mn2ijk8mibrjsyh/John%20Moreira%20Resume.docx?dl=0S" target="_blank">Resume</a></li>
-        		<li><a href="/blog.html">Blog</a></li>
 				<li><a href="https://github.com/jnm26">GitHub</a></li>
+				<li><a href="/blog.html">Projects/Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>John Moreira's Blog</h1>
-				<h2>So what's an Undertow anyway? - 4/30/17</h2>
-				<h3>un·der·tow</h3>
-				<p>another term for rip current, used in the incorrect belief that rip currents drag swimmers below the surface.</p>
-				<p>an implicit quality, emotion, or influence underlying the superficial aspects of something and leaving a particular impression.</p>
-				<p>Undertow is a game I've been thinking of making since around 2013. The whole idea actually came from one of the powers in the game BioShock: Infinite (which unfortunately ended up dissapointing me as a game). 
-				It's a 2D game which focuses on player movement, and having a wide array of options to approach any given situation, primarily using water-based abilities.
-				</p>  
+        		<h1>My Projects</h1>
+				<h2>prIDE - postmortem</h2>
+				<p><a href="https://github.com/brandonrninefive/prIDE">prIDE</a> is a completely free Online IDE designed with collaboration in mind. Developed over two semesters during our final two project based classes at NJIT, the goal of the project was to revolutionize
+				the frankly sorry state of most freely available Online IDEs. There are other projects which  are quite similar to ours, but our goal was to develop a sleek and attractive UI, have collaboration-based features, and have Git integration built in. 
+				All of the details are available on the <a href="https://github.com/brandonrninefive/prIDE">GitHub page</a> for prIDE. In this post, we’ll go through the learning process, what was successful, what was difficult, and much more. 
+prIDE was born out of the lackluster state of most freely available Online IDEs, and was also heavily inspired by the entire Google Docs suite. One of the most impressive things about Google Docs is the fact that it took one of the biggest selling pieces of owning a PC in the mid to late 90s and made it completely free with no software installation required. Of course, with more than a decade of improvements to hardware and software since Microsoft’s first introduction of Office, this isn’t the most surprising thing in retrospect. But when we consider the enormous attachment rate of Office to not only Windows PCs but Macs as well, I believe the Google Docs suite stands in a unique juxtaposition. Computers were sold on word processing, PowerPoint presentations, and spreadsheets. It revolutionized home computing and gave it a reason. Microsoft has been selling the impressive Office applications ever since their introduction, and suddenly Google has a feature complete free version that’s usable from almost any device. However, Google is missing a major piece in their suite, and that’s a software comparable to Visual Studio, one of the most used and powerful software development suites.
+Bringing Visual Studio to a web browser environment is likely a challenging prospect even after Google’s massive success with Docs, Slides, and Sheets. Visual Studio supports a plethora of languages, holds gigabytes worth of documentation and help data, and needs to support production level software development. I guess it’s not too big a surprise that Google hasn’t attempted a free Visual Studio clone just yet. But – they could, and I believe should, have something for programming in the Docs suite. This lack of any sort of programming support comes as a bit of a surprise when you consider how valuable it could be to hack away at a Python script really quick with a friend. In truth, on top of being free and quickly accessible via a browser, one of the biggest impacts of the Docs suite is the collaboration and real-time updating of text as its written by multiple contributors. This was what prIDE sought to bring to the Online IDE space. Ultimately, prIDE is a fuse between the power of collaboration and the easy to use state of simply opening up a page in a browser.
+Some of the biggest challenges during development actually came from our work done during our first semester. There was a bit of a nerve wracking night right before our project’s beta was due, during which we needed to bring together all of the individual pieces we had worked on. I had created the interface using HTML, CSS, and JavaScript (no libraries or extra design tools were allowed – IE Bootstrap). This needed to be merged with the Node.js server which was mostly set up, but we didn’t have much of the logic done for compiling or running the code. We also had no Git implementation or real-time updates implementation at all during this phase. We certainly had a long night, but were able to bring together a decent setup that could compile and run java code from the browser. After this rough initial phase, the tides turned in our favor for the rest of the semester. At the end, we had a great accomplishment on our hands. Almost everything worked great and as intended. It looked like our final CS class was going to be easy! <em> To be continued...</em>
+</p>
+
     		</div>
 		</div>
 	</body>
