--- a/blog.html
+++ b/blog.html
@@ -9,8 +9,8 @@
     		<ul>
         		<li><a href="/">Home</a></li>
         		<li><a href="https://www.dropbox.com/s/mn2ijk8mibrjsyh/John%20Moreira%20Resume.docx?dl=0S" target="_blank">Resume</a></li>
-				<li><a href="https://github.com/jnm26">GitHub</a></li>
-				<li><a href="/blog.html">Projects/Blog</a></li>
+				<li><a href="https://github.com/jnm26" target="_blank">GitHub</a></li>
+				<li><a href="/blog">Projects/Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
