--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>My Projects</h1>
-				<h2>prIDE - postmortem</h2>
+				<h2><a href="https://github.com/brandonrninefive/prIDE">prIDE</a> - postmortem</h2>
 				<img src="pride.png" alt="prIDE screenshot" height="432" width="768">
 				<p><a href="https://github.com/brandonrninefive/prIDE">prIDE</a> is a completely free Online IDE designed with collaboration in mind. Developed over two semesters during our final two project based classes at NJIT, the goal of the project was to revolutionize
 				the frankly sorry state of most freely available Online IDEs. There are other projects which  are quite similar to ours, but our goal was to develop a sleek and attractive UI, have collaboration-based features, and have Git integration built in. 
@@ -28,8 +28,26 @@
 
 <p>Some of the biggest challenges during development actually came from our work done during our first semester. There was a bit of a nerve wracking night right before our project’s beta was due, during which we needed to bring together all of the individual pieces we had worked on. I had created the interface using HTML, CSS, and JavaScript (no libraries or extra design tools were allowed – IE Bootstrap). This needed to be merged with the Node.js server which was mostly set up, but we didn’t have much of the logic done for compiling or running the code. We also had no Git implementation or real-time updates implementation at all during this phase. We certainly had a long night, but were able to bring together a decent setup that could compile and run java code from the browser. After this rough initial phase, the tides turned in our favor for the rest of the semester. At the end, we had a great accomplishment on our hands. Almost everything worked great and as intended. It looked like our final CS class was going to be easy! <em> To be continued...</em>
 </p>
-
-
+<br>
+				<h2><a href="https://github.com/jnm26/Quake-2-Stealth-Mod">Quake 2 Stealth Mod</a></h2>
+				<p>Inspired by the stealth action of Dishonored, this Q2 stealth mod will have you blinking (teleporting) past enemies, laying grenade traps, and pushing and pulling your foes. Experience a new way to play Q2! In this Dishonored inspired mod, I've blended the stealth action of Dishonored with the fast, fluid movement of Quake 2.</p>
+				<p>Shortlist of changes and interesting tidbits:</p>
+				<p>Experience a new way to play Q2! In this Dishonored inspired mod, I've blended the stealth action of Dishonored with the fast, fluid movement of Quake 2.</p>
+				<p>Regular grenades do very little damage, but what's going on with the grenade launcher? The grenade launcher now places sticky grenades throughout the map with a timer of around 10 seconds. Lob a grenade to attract an enemy to its position, and time it with the sticky grenades explosion! Explosion sizes have been increased to make these interactions more forgiving.</p>
+				<p>The fabled BFG, once a weapon of mass destruction in the Quake world, has become a lowly.... teleporter device? Aim the BFG and click to teleport a short distance ahead. Use this to sneak past your enemies! Make sure you don't run low on Mana, though...</p>
+				<p>Mana system. There's no more bullets, the player's actions are fully dictated by the use of Mana. Mana recharges slowly, but you'll want to make efficient use of the various mana packs throughout the map to top off your mana and optimize your routes throughout the level.</p>
+				<p>Push and pull enemies using mana, sending them launching into the sky or pull them close and switch to the blaster for a one shot critical attack</p>
+				<p>Drain the life of your enemies to fuel your own, but don't waste too much Mana! Enjoy!</p>
+				<p><a href="https://github.com/jnm26/Quake-2-Stealth-Mod">Quake 2 Stealth Mod on GitHub</a></p>
+				
+				<h2><a href="https://github.com/jnm26/Quake-4-Askew-Mod">Quake 4 Askew Mod</a></h2>
+				<p>Every polygon has been skewed, the walls have become floors, and somethings up with the gravity... this has to be one of the wackiest Q4 mods yet! In this mod, players can experience a wilder, weirder way to play Quake 4...</p>
+				<p>Interesting changes:</p>
+				<p>Every polygon in the game world is skewed by a certain factor, causing heads to stretch, animations to move in odd ways, and my personal favorite: the reticle is not where your weapon will fire! You'll need to keep an eye on your gun's muzzle to get an idea of where you're firing :)</p>
+				<p>Gravity is different! All of the game's gravity is tilted by 45 degrees on the x axis. Walls become floors and some floors become walls, not to mention objects in the scene moving in crazy ways!</p>
+				<p>Some fun weapon mods - there are a bunch, but an interesting one is the machine gun. Land a headshot and you'll one shot just about anything. Good luck aiming with everything skewed, though! Meanwhile, spraying won't get you very far</p>
+				<p>The more you fire, the sooner you'll lose. With everything going wacky in the Quake 4 world, completing each level is a challenge to click as little as possible. Make those shots count. The armor gauge ticks down to 0 whenever you're firing a weapon (pressing left click). Once it hits zero, you'll die! Have fun!</p>
+				<p><a href="https://github.com/jnm26/Quake-4-Askew-Mod">Quake 4 Askew Mod on GitHub</a></p>
     		</div>
 		</div>
 		
