--- a/blog.html
+++ b/blog.html
@@ -30,6 +30,7 @@
 </p>
 <br>
 				<h2><a href="https://github.com/jnm26/Quake-2-Stealth-Mod">Quake 2 Stealth Mod</a></h2>
+				<img src="quake2.jpg" alt="Q2" height="370" width="800">
 				<p>Inspired by the stealth action of Dishonored, this Q2 stealth mod will have you blinking (teleporting) past enemies, laying grenade traps, and pushing and pulling your foes. Experience a new way to play Q2! In this Dishonored inspired mod, I've blended the stealth action of Dishonored with the fast, fluid movement of Quake 2.</p>
 				<p>Shortlist of changes and interesting tidbits:</p>
 				<p>Experience a new way to play Q2! In this Dishonored inspired mod, I've blended the stealth action of Dishonored with the fast, fluid movement of Quake 2.</p>
@@ -37,19 +38,24 @@
 				<p>The fabled BFG, once a weapon of mass destruction in the Quake world, has become a lowly.... teleporter device? Aim the BFG and click to teleport a short distance ahead. Use this to sneak past your enemies! Make sure you don't run low on Mana, though...</p>
 				<p>Mana system. There's no more bullets, the player's actions are fully dictated by the use of Mana. Mana recharges slowly, but you'll want to make efficient use of the various mana packs throughout the map to top off your mana and optimize your routes throughout the level.</p>
 				<p>Push and pull enemies using mana, sending them launching into the sky or pull them close and switch to the blaster for a one shot critical attack</p>
-				<p>Drain the life of your enemies to fuel your own, but don't waste too much Mana! Enjoy!</p>
+				<p>Drain the life of your enemies to fuel your own, but don't waste too much Mana! Enjoy! PS. Some screenshots/gifs/video forthcoming</p>
 				<p><a href="https://github.com/jnm26/Quake-2-Stealth-Mod">Quake 2 Stealth Mod on GitHub</a></p>
-				
+				<br>
 				<h2><a href="https://github.com/jnm26/Quake-4-Askew-Mod">Quake 4 Askew Mod</a></h2>
+				<img src="quake4.jpg" alt="Q4" height="215" width="460">
 				<p>Every polygon has been skewed, the walls have become floors, and somethings up with the gravity... this has to be one of the wackiest Q4 mods yet! In this mod, players can experience a wilder, weirder way to play Quake 4...</p>
 				<p>Interesting changes:</p>
 				<p>Every polygon in the game world is skewed by a certain factor, causing heads to stretch, animations to move in odd ways, and my personal favorite: the reticle is not where your weapon will fire! You'll need to keep an eye on your gun's muzzle to get an idea of where you're firing :)</p>
 				<p>Gravity is different! All of the game's gravity is tilted by 45 degrees on the x axis. Walls become floors and some floors become walls, not to mention objects in the scene moving in crazy ways!</p>
 				<p>Some fun weapon mods - there are a bunch, but an interesting one is the machine gun. Land a headshot and you'll one shot just about anything. Good luck aiming with everything skewed, though! Meanwhile, spraying won't get you very far</p>
-				<p>The more you fire, the sooner you'll lose. With everything going wacky in the Quake 4 world, completing each level is a challenge to click as little as possible. Make those shots count. The armor gauge ticks down to 0 whenever you're firing a weapon (pressing left click). Once it hits zero, you'll die! Have fun!</p>
+				<p>The more you fire, the sooner you'll lose. With everything going wacky in the Quake 4 world, completing each level is a challenge to click as little as possible. Make those shots count. The armor gauge ticks down to 0 whenever you're firing a weapon (pressing left click). Once it hits zero, you'll die! Have fun! PS. Some screenshots/gifs/video forthcoming</p>
 				<p><a href="https://github.com/jnm26/Quake-4-Askew-Mod">Quake 4 Askew Mod on GitHub</a></p>
     		</div>
 		</div>
-		
+			<footer>
+    		<ul>
+        		<li><a href="mailto:johnmoreira1019@gmail.com">Contact: johnmoreira1019@gmail.com</a></li>
+			</ul>
+		</footer>
 	</body>
 </html>
