--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>My Projects</h1>
+        		<h1>Projects/Blog</h1>
 				<h2><a href="https://github.com/brandonrninefive/prIDE">prIDE</a> - postmortem</h2>
 				<img src="pride.png" alt="prIDE screenshot" height="432" width="768">
 				<p><a href="https://github.com/brandonrninefive/prIDE">prIDE</a> is a completely free Online IDE designed with collaboration in mind. Developed over two semesters during our final two project based classes at NJIT, the goal of the project was to revolutionize
