--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-        		<li><a href="https://www.dropbox.com/s/mn2ijk8mibrjsyh/John%20Moreira%20Resume.docx?dl=0S" target="_blank">Resume</a></li>
+        		<li><a href="https://www.dropbox.com/s/4tb5826ah2cv6mw/John%20Moreira%20Resume%20New.docx?dl=0" target="_blank">Resume</a></li>
 				<li><a href="https://github.com/jnm26" target="_blank">GitHub</a></li>
 				<li><a href="/blog">Projects/Blog</a></li>
     		</ul>
