--- a/index.html
+++ b/index.html
@@ -7,21 +7,18 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
-        		<li><a href="https://www.dropbox.com/s/4tb5826ah2cv6mw/John%20Moreira%20Resume%20New.docx?dl=0" target="_blank">Resume</a></li>
-				<li><a href="https://github.com/jnm26" target="_blank">GitHub</a></li>
+        		<li><a href="/">About</a></li>
 				<li><a href="/blog">Projects/Blog</a></li>
+				<li><a href="https://github.com/jnm26" target="_blank">GitHub</a></li>
+        		<li><a href="https://www.dropbox.com/s/4tb5826ah2cv6mw/John%20Moreira%20Resume%20New.docx?dl=0" target="_blank">Resume</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>About John Moreira</h1>
-				<img src="photo.PNG" alt="Photo of John Moreira" height="213" width="204">
-				<p>Thanks for coming to my site! I'm a programmer with interest in game dev, optimization, and hardware/software interfacing.</p>
-				<p>I started programming when I was a freshman in High School when I took a Visual Basic/C# class. I had loved computers and computer games since I was a kid, so learning programming was the natural progression of my interests.
-				I continued through all of the programming courses my school offered, and it wasn't long before I decided that Computer Science and programming was my passion. I loved the freedom, utility, and opportunity presented by the medium.
-				Since College, I've participated in quite a few Hackathons and Game Jams, working with my friends on various projects that interested us. </p>
-				<p> If you'd like to see some of my projects, check out the <a href="/blog">Projects/Blog</a></li> tab. You could also check out my <a href="https://github.com/jnm26">GitHub</a></li>.</p>
+        		<h1>John Moreira</h1>
+				<img src="me.PNG" alt="Photo of John Moreira" height="272" width="272">
+				<p>I'm a programmer with an interest in computer graphics, automation, and game design.</p>
+				<p>Please head over to the <a href="/blog">Projects/Blog</a></li> tab to see what I'm cooking up. You could also check out my <a href="https://github.com/jnm26">GitHub</a> or my <a href="https://www.dropbox.com/s/4tb5826ah2cv6mw/John%20Moreira%20Resume%20New.docx?dl=0" target="_blank">Resume</a></li>.</p>
     		</div>
 		</div>
 		<footer>
