Update home page with new image and text

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>John Moreira</h1>
-				<img src="me.PNG" alt="Photo of John Moreira" height="272" width="272">
+				<img src="me.png" alt="Photo of John Moreira" height="272" width="272">
 				<p>I'm a programmer with an interest in computer graphics, automation, and game design.</p>
 				<p>Please head over to the <a href="/blog">Projects/Blog</a></li> tab to see what I'm cooking up. You could also check out my <a href="https://github.com/jnm26">GitHub</a> or my <a href="https://www.dropbox.com/s/4tb5826ah2cv6mw/John%20Moreira%20Resume%20New.docx?dl=0" target="_blank">Resume</a></li>.</p>
     		</div>
