--- a/blog.html
+++ b/blog.html
@@ -7,15 +7,38 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
-        		<li><a href="https://www.dropbox.com/s/4tb5826ah2cv6mw/John%20Moreira%20Resume%20New.docx?dl=0" target="_blank">Resume</a></li>
-				<li><a href="https://github.com/jnm26" target="_blank">GitHub</a></li>
+        		<li><a href="/">About</a></li>
 				<li><a href="/blog">Projects/Blog</a></li>
+				<li><a href="https://github.com/jnm26" target="_blank">GitHub</a></li>
+        		<li><a href="https://www.dropbox.com/s/4tb5826ah2cv6mw/John%20Moreira%20Resume%20New.docx?dl=0" target="_blank">Resume</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>Projects/Blog</h1>
+				<h2><a href="https://github.com/jnm26/Quake-2-Stealth-Mod">Quake 2 Stealth Mod</a></h2>
+				<img src="quake2.jpg" alt="Q2" height="370" width="800">
+				<p>Inspired by the stealth action of Dishonored, this Q2 stealth mod features teleportion, grenade traps, new weapon/enemy interactions, and a new lighting model.</p>
+				<p>The original Quake 2 "global illumination" system used a static global light with a single intensity value. On top of this, dynamic lights were placed around the level and could be instantiated/destroyed on the fly (think muzzle flashes, projectiles, and point lights).</p> 
+				<p>The mod turns off this global light in a pattern, as if the lights of the entire facility were flickering on and off. When the lights go out, enemies lose track of you, unless you are illuminated by point lights, projectile lights, etc. </p>
+				<p>The grenade launcher now places sticky grenades throughout the map with a timer of 10 seconds. You can use regular grenades to attract an enemy to a location, such as where you've placed a sticky grenade. Explosion sizes have been increased to make these interactions more forgiving.</p>
+				<p>The BFG is now a teleportation device. Aim the BFG and click to teleport a short distance ahead. You can sneak past enemies this way, and also access locations that were not intended to be reachable by the original devs.</p>
+				<p>Mana system. There's no more bullets, the player's actions are fully dictated by the use of Mana. Mana recharges slowly, but you'll want to make efficient use of the various mana packs throughout the map to top off your mana and optimize your routes throughout the levels.</p>
+				<p>Push and pull enemies throughout the arenas using mana, sending them launching into the sky or pulling them near. </p>
+				<p>The default blaster weapon no longer fires a projectile, and instead is a high power taser with a very short range.</p>
+				<p>Life drain enemies to increase your own health while sucking theirs away, at the cost of mana.</p>
+				<p><a href="https://github.com/jnm26/Quake-2-Stealth-Mod">Quake 2 Stealth Mod on GitHub</a></p>
+				<br>
+				<h2><a href="https://github.com/jnm26/Quake-4-Askew-Mod">Quake 4 Askew Mod</a></h2>
+				<img src="quake4.jpg" alt="Q4" height="215" width="460">
+				<p>Every polygon has been skewed, the walls have become floors, and somethings up with the gravity... this has to be one of the wackiest Q4 mods yet! In this mod, players can experience a wilder, weirder way to play Quake 4...</p>
+				<p>Interesting changes:</p>
+				<p>Every polygon in the game world is skewed by a certain factor, causing heads to stretch, animations to move in odd ways, and my personal favorite: the reticle is not where your weapon will fire! You'll need to keep an eye on your gun's muzzle to get an idea of where you're firing :)</p>
+				<p>Gravity is different! All of the game's gravity is tilted by 45 degrees on the x axis. Walls become floors and some floors become walls, not to mention objects in the scene moving in crazy ways!</p>
+				<p>Some fun weapon mods - there are a bunch, but an interesting one is the machine gun. Land a headshot and you'll one shot just about anything. Good luck aiming with everything skewed, though! Meanwhile, spraying won't get you very far</p>
+				<p>The more you fire, the sooner you'll lose. With everything going wacky in the Quake 4 world, completing each level is a challenge to click as little as possible. Make those shots count. The armor gauge ticks down to 0 whenever you're firing a weapon (pressing left click). Once it hits zero, you'll die! Have fun! PS. Some screenshots/gifs/video forthcoming</p>
+				<p><a href="https://github.com/jnm26/Quake-4-Askew-Mod">Quake 4 Askew Mod on GitHub</a></p>
+				
 				<h2><a href="https://github.com/brandonrninefive/prIDE">prIDE</a> - postmortem</h2>
 				<img src="pride.png" alt="prIDE screenshot" height="432" width="768">
 				<p><a href="https://github.com/brandonrninefive/prIDE">prIDE</a> is a completely free Online IDE designed with collaboration in mind. Developed over two semesters during our final two project based classes at NJIT, the goal of the project was to revolutionize
@@ -32,27 +55,6 @@
 			<p>I believe one of the biggest things we all learned from working on prIDE was how to work with a team. Some, but not all of us, have some work experience at internships. While those with internships may have learned a bit about what it’s like to work on a project together with a team, that certainly wasn’t true for everyone. If there’s one thing prIDE has given us outside of the vast improvements to our programming knowledge, it’s the knowhow of how to best interact and work as a team. If we were to do anything differently if we had another go-around, I think we could have much more consistent meetings. Since everyone in this group knew each other very well before working on the project (we are all very good friends) this meant that I, as the project manager, was less of a boss to my team members and more of a guider and friendly manager. Of course, I don’t think I would want be a ‘boss’ or even feel as though the project manager is meant to be one. I do however think that my role would have been a bit different if I was acting as the project manager for a team that wasn’t made up entirely of people that I know already.</p>
 			<p>To top off prIDE, we gave some surveys out to our fellow students at NJIT and our good friends at the Association for Computing Machinery. We think prIDE has been excellently received, and we think we were really successful as a team. Some of the feedback we received from our surveys were great too. Overall prIDE has been a fantastic experience.</p>
 <br>
-				<h2><a href="https://github.com/jnm26/Quake-2-Stealth-Mod">Quake 2 Stealth Mod</a></h2>
-				<img src="quake2.jpg" alt="Q2" height="370" width="800">
-				<p>Inspired by the stealth action of Dishonored, this Q2 stealth mod will have you blinking (teleporting) past enemies, laying grenade traps, and pushing and pulling your foes. Experience a new way to play Q2! In this Dishonored inspired mod, I've blended the stealth action of Dishonored with the fast, fluid movement of Quake 2.</p>
-				<p>Shortlist of changes and interesting tidbits:</p>
-				<p>What's going on with the lighting? Quake 2 was staticly lit using basic intensity values. Excellently, the developers determine how visible you are to enemies based on how lit you are. Muzzle flashes will brighten you, as will other scattered light sources throughout the levels. However, the main game lighting is on the fritz. For a few seconds, the light will be on, until it suddenly flickers off. After a few moments, it flickers back. Take advantage of the failing lights to slip past your enemies, and use the darkness to escape if you've been caught. Once the enemies lose Line of Sight, use the darkness to hide. The enemies have a much tougher time chasing the player through the level due to the reduced number of trace points an enemy can use to track you down.</p>
-				<p>Regular grenades do very little damage, but what's going on with the grenade launcher? The grenade launcher now places sticky grenades throughout the map with a timer of around 10 seconds. Lob a grenade to attract an enemy to its position, and time it with the sticky grenades explosion! Explosion sizes have been increased to make these interactions more forgiving.</p>
-				<p>The fabled BFG, once a weapon of mass destruction in the Quake world, has become a lowly.... teleporter device? Aim the BFG and click to teleport a short distance ahead. Use this to sneak past your enemies! Make sure you don't run low on Mana, though...</p>
-				<p>Mana system. There's no more bullets, the player's actions are fully dictated by the use of Mana. Mana recharges slowly, but you'll want to make efficient use of the various mana packs throughout the map to top off your mana and optimize your routes throughout the level.</p>
-				<p>Push and pull enemies using mana, sending them launching into the sky or pull them close and switch to the blaster for a one shot critical attack</p>
-				<p>Drain the life of your enemies to fuel your own, but don't waste too much Mana! Enjoy! PS. Some screenshots/gifs/video forthcoming</p>
-				<p><a href="https://github.com/jnm26/Quake-2-Stealth-Mod">Quake 2 Stealth Mod on GitHub</a></p>
-				<br>
-				<h2><a href="https://github.com/jnm26/Quake-4-Askew-Mod">Quake 4 Askew Mod</a></h2>
-				<img src="quake4.jpg" alt="Q4" height="215" width="460">
-				<p>Every polygon has been skewed, the walls have become floors, and somethings up with the gravity... this has to be one of the wackiest Q4 mods yet! In this mod, players can experience a wilder, weirder way to play Quake 4...</p>
-				<p>Interesting changes:</p>
-				<p>Every polygon in the game world is skewed by a certain factor, causing heads to stretch, animations to move in odd ways, and my personal favorite: the reticle is not where your weapon will fire! You'll need to keep an eye on your gun's muzzle to get an idea of where you're firing :)</p>
-				<p>Gravity is different! All of the game's gravity is tilted by 45 degrees on the x axis. Walls become floors and some floors become walls, not to mention objects in the scene moving in crazy ways!</p>
-				<p>Some fun weapon mods - there are a bunch, but an interesting one is the machine gun. Land a headshot and you'll one shot just about anything. Good luck aiming with everything skewed, though! Meanwhile, spraying won't get you very far</p>
-				<p>The more you fire, the sooner you'll lose. With everything going wacky in the Quake 4 world, completing each level is a challenge to click as little as possible. Make those shots count. The armor gauge ticks down to 0 whenever you're firing a weapon (pressing left click). Once it hits zero, you'll die! Have fun! PS. Some screenshots/gifs/video forthcoming</p>
-				<p><a href="https://github.com/jnm26/Quake-4-Askew-Mod">Quake 4 Askew Mod on GitHub</a></p>
     		</div>
 		</div>
 			<footer>
